fix(export results): generating export now covers full div

--- a/components/ResultsPage/ExportResults/DownloadModal.module.scss
+++ b/components/ResultsPage/ExportResults/DownloadModal.module.scss
@@ -232,7 +232,7 @@
 
 .generating{
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
